# docker_ws

./: README.md  bashrc
20221118_KIMM_LQR_MPC_Gazebo/: .catkin_workspacecom.dropbox.attrs
KITECH_quad_v2_simple/src/quadruped_test_description/: CMakeLists.txt
KITECH_quad_v2_simple/src/quadruped_test_description/config/: controller_lin.yaml  controller_lin_sip.yaml
KITECH_quad_v2_simple/src/quadruped_test_description/control/cpp/: MJMPC.cpp  MJMPC.h  dm_lqr.cpp  dm_mpc.cpp  dm_mpc_quad2.cpp  dm_mpc_quad2_backup.cpp  dm_mpc_quad2_mod.cpp  dm_mpc_quad2_sip copy.cpp  dm_mpc_quad2_sip.cpp
KITECH_quad_v2_simple/src/quadruped_test_description/control/script/: Dynamics.ipynb  Dynamics_1.ipynb  Dynamics_with_slope.ipynb  dmpc.py  eom.py
KITECH_quad_v2_simple/src/quadruped_test_description/launch/: quadruped_2_gazebo.launch  quadruped_2_gazebo2.launch  quadruped_2_gazebo_sip.launch  test.launch
KITECH_quad_v2_simple/src/quadruped_test_description/mesh/V1/: LF0.stl  LF1.stl  LF2.stl  LeftWheel.stl  RF0.stl  RF1.stl  RF2.stl  RightWheel.stl  foot.stl
KITECH_quad_v2_simple/src/quadruped_test_description/mesh/V2/: LF0.stl  LF2.stl  LeftWheel.stl  RF0.stl  RF2.stl  RightWheel.stl
KITECH_quad_v2_simple/src/quadruped_test_description/urdf/: quadruped_test2.gazebo  quadruped_test2.trans  quadruped_test2.urdf  quadruped_test2.urdf.xacro  quadruped_test2_noleg.urdf.xacro  quadruped_test2_noleg_2.urdf.xacro  quadruped_test2_simple.urdf  quadruped_test2_sip.gazebo  quadruped_test2_sip.trans  quadruped_test2_sip.urdf.xacro
nvidia-docker2_image/: Dockerfile  (+3 more)
(+85 files in other folders)
